# CTemplate

./: CMakeLists.txt  LICENSE  Makefile  README.md  check.ps1  doc.org  start.ps1  start.sh
src/: main.c
